--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="https://jsg203/" class="icon brands fa-github"><span>Github</span></a>
+						<a href="https://github.com/jsg203" class="icon brands fa-github"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
