--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="https://github.com/jsg203" class="icon brands fa-github"><span>Github</span></a>
+						<a href="https://www.linkedin.com/in/julie-sg2016" class="icon brands fa fa-linkedin"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -61,7 +61,7 @@
 											<a href="https://www.linkedin.com/pulse/pull-pop-perfection-julie-son-garcia-mb-ascp-cm/" class="image fit"><img src="images/CoorsCapability.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="https://github.com/jsg203/jsg203.project/blob/master/images/Songarcia_Final_Report.pdf" class="image fit"><img src="images/BigData.png" alt=""></a>
 										
 									</div>
 								</section>
