--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Julie Son-Garcia</h1>
-									<p>Next-Gen Sequencing Lab Tech & Data Analyst</p>
+									<p>NGS Lab Tech & Data Analyst</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
