--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="https://www.linkedin.com/in/julie-sg2016" class="icon brands fa fa-linkedin"><span>Github</span></a>
+						<a href="https://www.linkedin.com/in/julie-sg2016" class="icon brands fa fa-linkedin"><span>LinkedIn</span></a>
 					</nav>
 
 				<!-- Main -->
