--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 											<a href="https://github.com/jsg203/jsg203.project/blob/master/images/Songarcia_Final_Report.pdf" class="image fit"><img src="images/BigData.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/jsg203/jsg203.project/blob/master/ProjectIII_Hotel.pdf" class="image fit"><img src=images/R_hotelDemands.png" alt=""></a>
+											<a href="https://github.com/jsg203/jsg203.project/blob/master/ProjectIII_Hotel.pdf" class="image fit"><img src="images/R_hotelDemands.png" alt=""></a>
 									</div>
 								</section>
 							</article>
