--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Julie Son-Garcia</h1>
-									<p>NGS Lab Tech & Data Analyst</p>
+									<p>Health Sciences Data Analyst</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -48,7 +48,7 @@
 								<p>
 									This is a compilation of my mini projects, academic reports, bootcamp visuals and articles.
 									I wanted to show the progression of my journey into data analytics using statistics, 
-									computer programming, and diverse softwares. 
+									computer programming, and diverse softwares (JMP, Tableau, R, SQL)
 								</p>
 								<section>
 									<div class="row">
@@ -66,6 +66,8 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/jsg203/jsg203.project/blob/master/ProjectIII_Hotel.pdf" class="image fit"><img src="images/R_hotelDemands.png" alt=""></a>
+											<div class="col-4 col-6-medium col-12-small">
+											<a href="https://www.linkedin.com/pulse/world-bank-analysis-sql-julie-son-garcia-mb-ascp-cm/" class="image fit"><img src="images/WorldBank.png" alt=""></a>
 									</div>
 								</section>
 							</article>
