--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="https://www.linkedin.com/in/julie-sg2016" class="icon brands fa fa-linkedin"><span>LinkedIn</span></a>
-						<a href="https://public.tableau.com/app/profile/julie.son.garcia203" class="icon brands fa-tableau"><span>Tableau</span></a>
+						<a href="https://public.tableau.com/app/profile/julie.son.garcia203" class="icon brands fa fa-tableau"><span>Tableau</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -66,7 +66,7 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/jsg203/jsg203.project/blob/master/ProjectIII_Hotel.pdf" class="image fit"><img src="images/R_hotelDemands.png" alt=""></a>
-											<div class="col-4 col-6-medium col-12-small">
+										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://www.linkedin.com/pulse/world-bank-analysis-sql-julie-son-garcia-mb-ascp-cm/" class="image fit"><img src="images/WorldBank.png" alt=""></a>
 									</div>
 								</section>
