--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="https://www.linkedin.com/in/julie-sg2016" class="icon brands fa fa-linkedin"><span>LinkedIn</span></a>
-						<a href="https://public.tableau.com/app/profile/julie.son.garcia203" class="icon brands fa-regular fa-sparkles"><span>Tableau</span></a> 
+						<a href="https://public.tableau.com/app/profile/julie.son.garcia203" <i class="fa fa-bar-chart"></i>><span>Tableau</span></a> 
 					</nav>
 
 				<!-- Main -->
