--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/jsg203/jsg203.project/blob/master/ProjectIII_Hotel.pdf" class="image fit"><img src="images/R_hotelDemands.png" alt=""></a>
-										
+										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://www.linkedin.com/pulse/world-bank-analysis-sql-julie-son-garcia-mb-ascp-cm/" class="image fit"><img src="images/WorldBank.png" alt=""></a>
 										</div>	
