--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://www.linkedin.com/pulse/world-bank-analysis-sql-julie-son-garcia-mb-ascp-cm/" class="image fit"><img src="images/WorldBank.png" alt=""></a>
 										</div>	
+										<a href="https://https://www.linkedin.com/pulse/healthcare-data-analysis-julie-son-garcia-mb-ascp-cm/" class="image fit"><img src="images/hospital.PNG" alt=""></a>
+										</div>	
 									</div>
 								</section>
 							</article>
