--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://www.linkedin.com/pulse/world-bank-analysis-sql-julie-son-garcia-mb-ascp-cm/" class="image fit"><img src="images/WorldBank.png" alt=""></a>
 										</div>	
-										<a href="https://www.linkedin.com/pulse/healthcare-data-analysis-julie-son-garcia-mb-ascp-cm/" class="image fit"><img src="images/hospital.PNG" alt=""></a>
+										<a href="https://www.linkedin.com/pulse/healthcare-data-analysis-julie-son-garcia-mb-ascp-cm?trackingId=7r5QHH%2BQTti%2FGvhCT235PA%3D%3D&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BvwFIs7CnTZiFL0aoFsQfZQ%3D%3D" class="image fit"><img src="images/hospital.PNG" alt=""></a>
 										</div>	
 									</div>
 								</section>
